--- a/crystal_client_templates/model.mustache
+++ b/crystal_client_templates/model.mustache
@@ -1,6 +1,6 @@
 # {{#lambdaPrefixWithHash}}{{> api_info}}{{/lambdaPrefixWithHash}}
 
-require "nason"
+require "json"
 require "time"
 require "log"
 
