--- a/crystal_client_templates/partial_model_generic.mustache
+++ b/crystal_client_templates/partial_model_generic.mustache
@@ -2,7 +2,7 @@
   # {{{.}}}
   {{/description}}
   class {{classname}}{{#parent}} < {{{.}}}{{/parent}}
-    include NASON::Serializable
+    include JSON::Serializable
 
     {{#hasRequired}}
     # Required properties
@@ -11,8 +11,12 @@
     {{#description}}
     # {{{.}}}
     {{/description}}
-    @[NASON::Field(key: "{{{baseName}}}", type: {{{dataType}}}{{#isNullable}} | Null{{/isNullable}}{{#isDate}}, converter: Time::ISO8601DateConverter{{/isDate}}{{#isDateTime}}, converter: Time::RFC3339Converter{{/isDateTime}}{{#defaultValue}}, default: {{{defaultValue}}}{{/defaultValue}}{{#isNullable}}, nillable: false{{/isNullable}})]
+    @[JSON::Field(key: "{{{baseName}}}", type: {{{dataType}}}{{#isNullable}} | Null{{/isNullable}}{{#isDate}}, converter: Time::ISO8601DateConverter{{/isDate}}{{#isDateTime}}, converter: Time::RFC3339Converter{{/isDateTime}}{{#defaultValue}}, default: {{{defaultValue}}}{{/defaultValue}}{{#isNullable}}, presence: true, ignore_serialize: {{{name}}}.nil? && !{{{name}}}_present?, emit_null: true{{/isNullable}})]
     property {{{name}}} : {{{dataType}}}{{#isNullable}} | Null{{/isNullable}}
+    {{#isNullable}}
+    @[JSON::Field(ignore: true)]
+    property? {{{name}}}_present : Bool = false
+    {{/isNullable}}
 
     {{/requiredVars}}
     {{#hasOptional}}
@@ -22,8 +26,10 @@
     {{#description}}
     # {{{.}}}
     {{/description}}
-    @[NASON::Field(key: "{{{baseName}}}", type: {{{dataType}}}?{{#isNullable}} | Null{{/isNullable}}{{#isDate}}, converter: Time::ISO8601DateConverter{{/isDate}}{{#isDateTime}}, converter: Time::RFC3339Converter{{/isDateTime}}{{#defaultValue}}, default: {{{defaultValue}}}{{/defaultValue}}, nillable: true)]
+    @[JSON::Field(key: "{{{baseName}}}", type: {{{dataType}}}?{{#isNullable}} | Null{{/isNullable}}{{#isDate}}, converter: Time::ISO8601DateConverter{{/isDate}}{{#isDateTime}}, converter: Time::RFC3339Converter{{/isDateTime}}{{#defaultValue}}, default: {{{defaultValue}}}{{/defaultValue}}, presence: true, ignore_serialize: {{{name}}}.nil? && !{{{name}}}_present?, emit_null: true)]
     property {{{name}}} : {{{dataType}}}?{{#isNullable}} | Null{{/isNullable}}
+    @[JSON::Field(ignore: true)]
+    property? {{{name}}}_present : Bool = false
 
     {{/optionalVars}}
 {{#hasEnums}}
@@ -46,7 +52,7 @@
       end
 
       def valid?(value)
-        value.nil? || value.null? || allowable_values.includes?(value)
+        value.nil? || allowable_values.includes?(value)
       end
     end
 
@@ -98,44 +104,44 @@
       {{#vars}}
       {{#hasValidation}}
       {{#maxLength}}
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}@{{{name}}}.to_s.size > {{{maxLength}}}
+      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.to_s.size > {{{maxLength}}}
         invalid_properties.push("invalid value for \"{{{name}}}\", the character length must be smaller than or equal to {{{maxLength}}}.")
       end
 
       {{/maxLength}}
       {{#minLength}}
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}@{{{name}}}.to_s.size < {{{minLength}}}
+      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.to_s.size < {{{minLength}}}
         invalid_properties.push("invalid value for \"{{{name}}}\", the character length must be great than or equal to {{{minLength}}}.")
       end
 
       {{/minLength}}
       {{#maximum}}
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}@{{{name}}} >{{#exclusiveMaximum}}={{/exclusiveMaximum}} {{{maximum}}}
+      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} >{{#exclusiveMaximum}}={{/exclusiveMaximum}} {{{maximum}}}
         invalid_properties.push("invalid value for \"{{{name}}}\", must be smaller than {{^exclusiveMaximum}}or equal to {{/exclusiveMaximum}}{{{maximum}}}.")
       end
 
       {{/maximum}}
       {{#minimum}}
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}@{{{name}}} <{{#exclusiveMinimum}}={{/exclusiveMinimum}} {{{minimum}}}
+      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} <{{#exclusiveMinimum}}={{/exclusiveMinimum}} {{{minimum}}}
         invalid_properties.push("invalid value for \"{{{name}}}\", must be greater than {{^exclusiveMinimum}}or equal to {{/exclusiveMinimum}}{{{minimum}}}.")
       end
 
       {{/minimum}}
       {{#pattern}}
       pattern = {{{pattern}}}
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}@{{{name}}} !~ pattern
+      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} !~ pattern
         invalid_properties.push("invalid value for \"{{{name}}}\", must conform to the pattern #{pattern}.")
       end
 
       {{/pattern}}
       {{#maxItems}}
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}@{{{name}}}.size > {{{maxItems}}}
+      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.size > {{{maxItems}}}
         invalid_properties.push("invalid value for \"{{{name}}}\", number of items must be less than or equal to {{{maxItems}}}."
       end
 
       {{/maxItems}}
       {{#minItems}}
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}@{{{name}}}.size < {{{minItems}}}
+      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.size < {{{minItems}}}
         invalid_properties.push("invalid value for \"{{{name}}}\", number of items must be greater than or equal to {{{minItems}}}."
       end
 
@@ -157,25 +163,25 @@
       {{/isEnum}}
       {{#hasValidation}}
       {{#maxLength}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}@{{{name}}}.to_s.size > {{{maxLength}}}
+      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.to_s.size > {{{maxLength}}}
       {{/maxLength}}
       {{#minLength}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}@{{{name}}}.to_s.size < {{{minLength}}}
+      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.to_s.size < {{{minLength}}}
       {{/minLength}}
       {{#maximum}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}@{{{name}}} >{{#exclusiveMaximum}}={{/exclusiveMaximum}} {{{maximum}}}
+      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} >{{#exclusiveMaximum}}={{/exclusiveMaximum}} {{{maximum}}}
       {{/maximum}}
       {{#minimum}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}@{{{name}}} <{{#exclusiveMinimum}}={{/exclusiveMinimum}} {{{minimum}}}
+      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} <{{#exclusiveMinimum}}={{/exclusiveMinimum}} {{{minimum}}}
       {{/minimum}}
       {{#pattern}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}@{{{name}}} !~ {{{pattern}}}
+      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} !~ {{{pattern}}}
       {{/pattern}}
       {{#maxItems}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}@{{{name}}}.size > {{{maxItems}}}
+      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.size > {{{maxItems}}}
       {{/maxItems}}
       {{#minItems}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}@{{{name}}}.size < {{{minItems}}}
+      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.size < {{{minItems}}}
       {{/minItems}}
       {{/hasValidation}}
       {{/vars}}
@@ -219,44 +225,44 @@
     # @param [Object] {{{name}}} Value to be assigned
     def {{{name}}}=({{{name}}})
       {{#maxLength}}
-      if {{^required}}!{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}{{{name}}}.to_s.size > {{{maxLength}}}
+      if {{^required}}!{{{name}}}.nil? && {{/required}}{{{name}}}.to_s.size > {{{maxLength}}}
         raise ArgumentError.new("invalid value for \"{{{name}}}\", the character length must be smaller than or equal to {{{maxLength}}}.")
       end
 
       {{/maxLength}}
       {{#minLength}}
-      if {{^required}}!{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}{{{name}}}.to_s.size < {{{minLength}}}
+      if {{^required}}!{{{name}}}.nil? && {{/required}}{{{name}}}.to_s.size < {{{minLength}}}
         raise ArgumentError.new("invalid value for \"{{{name}}}\", the character length must be great than or equal to {{{minLength}}}.")
       end
 
       {{/minLength}}
       {{#maximum}}
-      if {{^required}}!{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}{{{name}}} >{{#exclusiveMaximum}}={{/exclusiveMaximum}} {{{maximum}}}
+      if {{^required}}!{{{name}}}.nil? && {{/required}}{{{name}}} >{{#exclusiveMaximum}}={{/exclusiveMaximum}} {{{maximum}}}
         raise ArgumentError.new("invalid value for \"{{{name}}}\", must be smaller than {{^exclusiveMaximum}}or equal to {{/exclusiveMaximum}}{{{maximum}}}.")
       end
 
       {{/maximum}}
       {{#minimum}}
-      if {{^required}}!{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}{{{name}}} <{{#exclusiveMinimum}}={{/exclusiveMinimum}} {{{minimum}}}
+      if {{^required}}!{{{name}}}.nil? && {{/required}}{{{name}}} <{{#exclusiveMinimum}}={{/exclusiveMinimum}} {{{minimum}}}
         raise ArgumentError.new("invalid value for \"{{{name}}}\", must be greater than {{^exclusiveMinimum}}or equal to {{/exclusiveMinimum}}{{{minimum}}}.")
       end
 
       {{/minimum}}
       {{#pattern}}
       pattern = {{{pattern}}}
-      if {{^required}}!{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}{{{name}}} !~ pattern
+      if {{^required}}!{{{name}}}.nil? && {{/required}}{{{name}}} !~ pattern
         raise ArgumentError.new("invalid value for \"{{{name}}}\", must conform to the pattern #{pattern}.")
       end
 
       {{/pattern}}
       {{#maxItems}}
-      if {{^required}}!{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}{{{name}}}.size > {{{maxItems}}}
+      if {{^required}}!{{{name}}}.nil? && {{/required}}{{{name}}}.size > {{{maxItems}}}
         raise ArgumentError.new("invalid value for \"{{{name}}}\", number of items must be less than or equal to {{{maxItems}}}.")
       end
 
       {{/maxItems}}
       {{#minItems}}
-      if {{^required}}!{{{name}}}.nil? && {{/required}}{{#isNullable}}!@{{{name}}}.null? && {{/isNullable}}{{{name}}}.size < {{{minItems}}}
+      if {{^required}}!{{{name}}}.nil? && {{/required}}{{{name}}}.size < {{{minItems}}}
         raise ArgumentError.new("invalid value for \"{{{name}}}\", number of items must be greater than or equal to {{{minItems}}}.")
       end
 
