--- a/crystal_client_templates/api.mustache
+++ b/crystal_client_templates/api.mustache
@@ -182,7 +182,7 @@ module {{moduleName}}
 
       # form parameters
       {{#hasFormParams}}
-      form_params = Hash(String, (String | Array(String) | ::File)).new
+      form_params = Hash(String, (String | Array(String) | IO)).new
       {{/hasFormParams}}
       {{^hasFormParams}}
       form_params = nil
