Change ext folder to src/ext instead of hard coded one

--- a/crystal_client_templates/shard_name.mustache
+++ b/crystal_client_templates/shard_name.mustache
@@ -9,7 +9,7 @@ require "time"
 require "uri"
 
 # Project files
-require "./{{shardName}}/ext/**"
+require "./ext/**"
 require "./{{shardName}}/configuration.cr"
 require "./{{shardName}}/api_error.cr"
 require "./{{shardName}}/api_client.cr"
