--- a/crystal_client_templates/model_test.mustache
+++ b/crystal_client_templates/model_test.mustache
@@ -21,7 +21,7 @@ describe {{moduleName}}::{{classname}} do
     it "should work" do
       {{#isEnum}}
       # assertion here. ref: https://crystal-lang.org/reference/guides/testing.html
-      # validator = Petstore::EnumTest::EnumAttributeValidator.new("{{{dataType}}}", [{{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}}])
+      # validator = EnumValidator.new("{{{dataType}}}", [{{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}}])
       # validator.allowable_values.each do |value|
       #   expect { instance.{{name}} = value }.not_to raise_error
       # end
