--- a/crystal_client_templates/shard_name.mustache
+++ b/crystal_client_templates/shard_name.mustache
@@ -10,6 +10,7 @@ require "uri"
 
 # Project files
 require "./ext/**"
+require "./validators/**"
 require "./{{shardName}}/configuration.cr"
 require "./{{shardName}}/api_error.cr"
 require "./{{shardName}}/api_client.cr"
